update hander
